samples/_failures_safe/1761369111_bbb12d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05c450ee.c: In function ‘main’:
./samples/SAFE/__tmp_05c450ee.c:148:12: error: missing terminating " character
  148 |     printf("================
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_05c450ee.c:148:5: error: expected expression at end of input
  148 |     printf("================
      |     ^~~~~~
./samples/SAFE/__tmp_05c450ee.c:148:5: error: expected declaration or statement at end of input
